--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,8 @@
     <script type="text/javascript" src="%PUBLIC_URL%/js/wow.min.js"></script>
     <link href="%PUBLIC_URL%/css/common.css" rel="stylesheet"/>
     <link href="%PUBLIC_URL%/css/layout.min.css" rel="stylesheet"/>
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.2/css/all.min.css" rel="stylesheet"/>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/css/all.min.css" rel="stylesheet"/>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/js/all.min.js"></script>
   </head>
   <body id="body" data-spy="scroll" data-target=".header">
     <div id="root"></div>
